--- a/DespesaDigital.csproj
+++ b/DespesaDigital.csproj
@@ -92,6 +92,7 @@
     <Compile Include="Code\DTO\dtoDepartamento\dtoDepartamento.cs" />
     <Compile Include="Code\DTO\dtoSetor\dtoSetor.cs" />
     <Compile Include="Code\DTO\dtoUsuario\dtoUsuario.cs" />
+    <Compile Include="Core\corePopUp.cs" />
     <Compile Include="Core\VariaveisGlobais.cs" />
     <Compile Include="frmPrincipal.cs">
       <SubType>Form</SubType>
@@ -101,6 +102,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Views\Forms\Cadastros\frmCadastro.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\Forms\Cadastros\frmCadastro.Designer.cs">
+      <DependentUpon>frmCadastro.cs</DependentUpon>
+    </Compile>
     <Compile Include="Views\Forms\Login\frmLogin.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -113,11 +120,29 @@
     <Compile Include="Views\Forms\Mensagens\frmMensagem.Designer.cs">
       <DependentUpon>frmMensagem.cs</DependentUpon>
     </Compile>
+    <Compile Include="Views\Forms\Mensagens\frmPergunta.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\Forms\Mensagens\frmPergunta.Designer.cs">
+      <DependentUpon>frmPergunta.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Forms\MinhaConta\frmMinhaConta.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\Forms\MinhaConta\frmMinhaConta.Designer.cs">
+      <DependentUpon>frmMinhaConta.cs</DependentUpon>
+    </Compile>
     <Compile Include="Views\Forms\SolicitarAcesso\frmSolicitarAcesso.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Views\Forms\SolicitarAcesso\frmSolicitarAcesso.Designer.cs">
       <DependentUpon>frmSolicitarAcesso.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Forms\Usuario\frmPesquisarUsuario.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\Forms\Usuario\frmPesquisarUsuario.Designer.cs">
+      <DependentUpon>frmPesquisarUsuario.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="frmPrincipal.resx">
       <DependentUpon>frmPrincipal.cs</DependentUpon>
@@ -132,14 +157,26 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Views\Forms\Cadastros\frmCadastro.resx">
+      <DependentUpon>frmCadastro.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Views\Forms\Login\frmLogin.resx">
       <DependentUpon>frmLogin.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Views\Forms\Mensagens\frmMensagem.resx">
       <DependentUpon>frmMensagem.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Views\Forms\Mensagens\frmPergunta.resx">
+      <DependentUpon>frmPergunta.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\Forms\MinhaConta\frmMinhaConta.resx">
+      <DependentUpon>frmMinhaConta.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Views\Forms\SolicitarAcesso\frmSolicitarAcesso.resx">
       <DependentUpon>frmSolicitarAcesso.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\Forms\Usuario\frmPesquisarUsuario.resx">
+      <DependentUpon>frmPesquisarUsuario.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
@@ -166,6 +203,15 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\dolar.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\logout.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\cancel.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\minimize.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
