--- a/DespesaDigital.csproj
+++ b/DespesaDigital.csproj
@@ -111,6 +111,12 @@
     <Compile Include="Views\Forms\Cadastros\frmCadastro.Designer.cs">
       <DependentUpon>frmCadastro.cs</DependentUpon>
     </Compile>
+    <Compile Include="Views\Forms\Departamento\frmPesquisarDepartamento.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\Forms\Departamento\frmPesquisarDepartamento.Designer.cs">
+      <DependentUpon>frmPesquisarDepartamento.cs</DependentUpon>
+    </Compile>
     <Compile Include="Views\Forms\Login\frmLogin.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -168,6 +174,9 @@
     </Compile>
     <EmbeddedResource Include="Views\Forms\Cadastros\frmCadastro.resx">
       <DependentUpon>frmCadastro.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\Forms\Departamento\frmPesquisarDepartamento.resx">
+      <DependentUpon>frmPesquisarDepartamento.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Views\Forms\Login\frmLogin.resx">
       <DependentUpon>frmLogin.cs</DependentUpon>
