--- a/DespesaDigital.csproj
+++ b/DespesaDigital.csproj
@@ -84,6 +84,7 @@
     <Compile Include="Code\BLL\bllCategoria\bllCategoria.cs" />
     <Compile Include="Code\BLL\bllConexao\bllConexao.cs" />
     <Compile Include="Code\BLL\bllDepartamento\bllDepartamento.cs" />
+    <Compile Include="Code\BLL\bllFornecedor\bllFornecedor.cs" />
     <Compile Include="Code\BLL\bllLogSistema\bllLogSistema.cs" />
     <Compile Include="Code\BLL\bllProduto\bllProduto.cs" />
     <Compile Include="Code\BLL\bllSetor\bllSetor.cs" />
@@ -92,6 +93,7 @@
     <Compile Include="Code\DAL\dalCategoria\dalCategoria.cs" />
     <Compile Include="Code\DAL\dalConexao\dalConexao.cs" />
     <Compile Include="Code\DAL\dalDepartamento\dalDepartamento.cs" />
+    <Compile Include="Code\DAL\dalFornecedor\dalFornecedor.cs" />
     <Compile Include="Code\DAL\dalLogSistema\dalLogSistema.cs" />
     <Compile Include="Code\DAL\dalProduto\dalProduto.cs" />
     <Compile Include="Code\DAL\dalSetor\dalSetor.cs" />
@@ -99,6 +101,7 @@
     <Compile Include="Code\DAL\dalUsuario\dalUsuario.cs" />
     <Compile Include="Code\DTO\dtoCategoria\dtoCategoria.cs" />
     <Compile Include="Code\DTO\dtoDepartamento\dtoDepartamento.cs" />
+    <Compile Include="Code\DTO\dtoFornecedor\dtoFornecedor.cs" />
     <Compile Include="Code\DTO\dtoProduto\dtoProduto.cs" />
     <Compile Include="Code\DTO\dtoSetor\dtoSetor.cs" />
     <Compile Include="Code\DTO\dtoUsuario\dtoUsuario.cs" />
