--- a/DespesaDigital.csproj
+++ b/DespesaDigital.csproj
@@ -86,6 +86,7 @@
     <Compile Include="Code\BLL\bllDepartamento\bllDepartamento.cs" />
     <Compile Include="Code\BLL\bllFornecedor\bllFornecedor.cs" />
     <Compile Include="Code\BLL\bllLogSistema\bllLogSistema.cs" />
+    <Compile Include="Code\BLL\bllProdutoFornecedor\bllProdutoFornecedor.cs" />
     <Compile Include="Code\BLL\bllProduto\bllProduto.cs" />
     <Compile Include="Code\BLL\bllSetorProduto\bllSetorProduto.cs" />
     <Compile Include="Code\BLL\bllSetor\bllSetor.cs" />
@@ -96,6 +97,7 @@
     <Compile Include="Code\DAL\dalDepartamento\dalDepartamento.cs" />
     <Compile Include="Code\DAL\dalFornecedor\dalFornecedor.cs" />
     <Compile Include="Code\DAL\dalLogSistema\dalLogSistema.cs" />
+    <Compile Include="Code\DAL\dalProdutoFornecedor\dalProdutoFornecedor.cs" />
     <Compile Include="Code\DAL\dalProduto\dalProduto.cs" />
     <Compile Include="Code\DAL\dalSetorProduto\dalSetorProduto.cs" />
     <Compile Include="Code\DAL\dalSetor\dalSetor.cs" />
