--- a/DespesaDigital.csproj
+++ b/DespesaDigital.csproj
@@ -84,6 +84,7 @@
     <Compile Include="Code\BLL\bllCategoria\bllCategoria.cs" />
     <Compile Include="Code\BLL\bllConexao\bllConexao.cs" />
     <Compile Include="Code\BLL\bllDepartamento\bllDepartamento.cs" />
+    <Compile Include="Code\BLL\bllFormaPagamento\bllFormaPagamento.cs" />
     <Compile Include="Code\BLL\bllFornecedor\bllFornecedor.cs" />
     <Compile Include="Code\BLL\bllLogSistema\bllLogSistema.cs" />
     <Compile Include="Code\BLL\bllProdutoFornecedor\bllProdutoFornecedor.cs" />
@@ -95,6 +96,7 @@
     <Compile Include="Code\DAL\dalCategoria\dalCategoria.cs" />
     <Compile Include="Code\DAL\dalConexao\dalConexao.cs" />
     <Compile Include="Code\DAL\dalDepartamento\dalDepartamento.cs" />
+    <Compile Include="Code\DAL\dalFormaPagamento\dalFormaPagamento.cs" />
     <Compile Include="Code\DAL\dalFornecedor\dalFornecedor.cs" />
     <Compile Include="Code\DAL\dalLogSistema\dalLogSistema.cs" />
     <Compile Include="Code\DAL\dalProdutoFornecedor\dalProdutoFornecedor.cs" />
@@ -105,6 +107,7 @@
     <Compile Include="Code\DAL\dalUsuario\dalUsuario.cs" />
     <Compile Include="Code\DTO\dtoCategoria\dtoCategoria.cs" />
     <Compile Include="Code\DTO\dtoDepartamento\dtoDepartamento.cs" />
+    <Compile Include="Code\DTO\dtoFormaPagamento\dtoFormaPagamento.cs" />
     <Compile Include="Code\DTO\dtoFornecedor\dtoFornecedor.cs" />
     <Compile Include="Code\DTO\dtoProduto\dtoProduto.cs" />
     <Compile Include="Code\DTO\dtoSetor\dtoSetor.cs" />
@@ -137,6 +140,24 @@
     </Compile>
     <Compile Include="Views\Forms\Departamento\frmPesquisarDepartamento.Designer.cs">
       <DependentUpon>frmPesquisarDepartamento.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Forms\FormaPagamento\frmPesquisarFormaPagamento.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\Forms\FormaPagamento\frmPesquisarFormaPagamento.Designer.cs">
+      <DependentUpon>frmPesquisarFormaPagamento.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Forms\Fornecedor\frmNovoFornecedor.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\Forms\Fornecedor\frmNovoFornecedor.Designer.cs">
+      <DependentUpon>frmNovoFornecedor.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Forms\Fornecedor\frmPesquisarFornecedor.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\Forms\Fornecedor\frmPesquisarFornecedor.Designer.cs">
+      <DependentUpon>frmPesquisarFornecedor.cs</DependentUpon>
     </Compile>
     <Compile Include="Views\Forms\Login\frmLogin.cs">
       <SubType>Form</SubType>
@@ -225,6 +246,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Views\Forms\Departamento\frmPesquisarDepartamento.resx">
       <DependentUpon>frmPesquisarDepartamento.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\Forms\FormaPagamento\frmPesquisarFormaPagamento.resx">
+      <DependentUpon>frmPesquisarFormaPagamento.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\Forms\Fornecedor\frmPesquisarFornecedor.resx">
+      <DependentUpon>frmPesquisarFornecedor.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Views\Forms\Login\frmLogin.resx">
       <DependentUpon>frmLogin.cs</DependentUpon>
