--- a/DespesaDigital.csproj
+++ b/DespesaDigital.csproj
@@ -209,6 +209,12 @@
     <Compile Include="Views\Forms\MinhaConta\frmMinhaConta.Designer.cs">
       <DependentUpon>frmMinhaConta.cs</DependentUpon>
     </Compile>
+    <Compile Include="Views\Forms\Modais\frmModalCheckBoxList.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\Forms\Modais\frmModalCheckBoxList.Designer.cs">
+      <DependentUpon>frmModalCheckBoxList.cs</DependentUpon>
+    </Compile>
     <Compile Include="Views\Forms\Produtos\frmNovoProduto.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -305,6 +311,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Views\Forms\MinhaConta\frmMinhaConta.resx">
       <DependentUpon>frmMinhaConta.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\Forms\Modais\frmModalCheckBoxList.resx">
+      <DependentUpon>frmModalCheckBoxList.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Views\Forms\Produtos\frmNovoProduto.resx">
       <DependentUpon>frmNovoProduto.cs</DependentUpon>
