Carregamento dos setores vinculados no produto quando abre edição do cadastro de produto

--- a/DespesaDigital.csproj
+++ b/DespesaDigital.csproj
@@ -123,6 +123,7 @@
     <Compile Include="Code\DTO\dtoModal\dtoModalCheckListBox.cs" />
     <Compile Include="Code\DTO\dtoProduto\dtoProduto.cs" />
     <Compile Include="Code\DTO\dtoSetor\dtoSetor.cs" />
+    <Compile Include="Code\DTO\dtoSetor\dtoSetorProduto.cs" />
     <Compile Include="Code\DTO\dtoTipoDespesa\dtoTipoDespesa.cs" />
     <Compile Include="Code\DTO\dtoUsuario\dtoUsuario.cs" />
     <Compile Include="Code\DTO\dtoWebApi\dtoWebApiPaises.cs" />
