--- a/DespesaDigital.csproj
+++ b/DespesaDigital.csproj
@@ -103,6 +103,7 @@
     <Compile Include="Code\DAL\dalCategoria\dalCategoria.cs" />
     <Compile Include="Code\DAL\dalConexao\dalConexao.cs" />
     <Compile Include="Code\DAL\dalDepartamento\dalDepartamento.cs" />
+    <Compile Include="Code\DAL\dalDespesa\dalDespesa.cs" />
     <Compile Include="Code\DAL\dalFormaPagamento\dalFormaPagamento.cs" />
     <Compile Include="Code\DAL\dalFornecedor\dalFornecedor.cs" />
     <Compile Include="Code\DAL\dalFornecedor\dalFornecedorContato.cs" />
@@ -118,10 +119,12 @@
     <Compile Include="Code\DAL\dalUsuario\dalUsuario.cs" />
     <Compile Include="Code\DTO\dtoCategoria\dtoCategoria.cs" />
     <Compile Include="Code\DTO\dtoDepartamento\dtoDepartamento.cs" />
+    <Compile Include="Code\DTO\dtoDespesa\dtoDespesa.cs" />
     <Compile Include="Code\DTO\dtoFormaPagamento\dtoFormaPagamento.cs" />
     <Compile Include="Code\DTO\dtoFornecedor\dtoFornecedor.cs" />
     <Compile Include="Code\DTO\dtoFornecedor\dtoFornecedorContato.cs" />
     <Compile Include="Code\DTO\dtoFornecedor\dtoFornecedorEndereco.cs" />
+    <Compile Include="Code\DTO\dtoImagem\dtoImagem.cs" />
     <Compile Include="Code\DTO\dtoModal\dtoModalCheckListBox.cs" />
     <Compile Include="Code\DTO\dtoProduto\dtoProduto.cs" />
     <Compile Include="Code\DTO\dtoSetor\dtoSetor.cs" />
@@ -171,6 +174,18 @@
     </Compile>
     <Compile Include="Views\Forms\Departamento\frmPesquisarDepartamento.Designer.cs">
       <DependentUpon>frmPesquisarDepartamento.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Forms\Despesa\frmDespesa.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\Forms\Despesa\frmDespesa.Designer.cs">
+      <DependentUpon>frmDespesa.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Forms\Despesa\frmPesquisarDespesa.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\Forms\Despesa\frmPesquisarDespesa.Designer.cs">
+      <DependentUpon>frmPesquisarDespesa.cs</DependentUpon>
     </Compile>
     <Compile Include="Views\Forms\FormaPagamento\frmNovaFormaPagamento.cs">
       <SubType>Form</SubType>
@@ -338,6 +353,12 @@
     <EmbeddedResource Include="Views\Forms\Departamento\frmPesquisarDepartamento.resx">
       <DependentUpon>frmPesquisarDepartamento.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Views\Forms\Despesa\frmDespesa.resx">
+      <DependentUpon>frmDespesa.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\Forms\Despesa\frmPesquisarDespesa.resx">
+      <DependentUpon>frmPesquisarDespesa.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Views\Forms\FormaPagamento\frmNovaFormaPagamento.resx">
       <DependentUpon>frmNovaFormaPagamento.cs</DependentUpon>
     </EmbeddedResource>
@@ -441,6 +462,11 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\minimize.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Code\BLL\bllDespesa\" />
+    <Folder Include="Code\BLL\bllImagem\" />
+    <Folder Include="Code\DAL\dalImagem\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
