--- a/DespesaDigital.csproj
+++ b/DespesaDigital.csproj
@@ -141,6 +141,7 @@
     <Compile Include="Code\DTO\dtoUsuario\dtoUsuario.cs" />
     <Compile Include="Code\DTO\dtoWebApi\dtoWebApiPaises.cs" />
     <Compile Include="Core\coreFormat.cs" />
+    <Compile Include="Core\coreNumericToString.cs" />
     <Compile Include="Core\corePopUp.cs" />
     <Compile Include="Core\coreValid.cs" />
     <Compile Include="Core\VariaveisGlobais.cs" />
@@ -205,6 +206,12 @@
     </Compile>
     <Compile Include="Views\Forms\Despesa\frmImagemDespesa.Designer.cs">
       <DependentUpon>frmImagemDespesa.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Forms\Despesa\frmNovaDespesa.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\Forms\Despesa\frmNovaDespesa.Designer.cs">
+      <DependentUpon>frmNovaDespesa.cs</DependentUpon>
     </Compile>
     <Compile Include="Views\Forms\Despesa\frmPesquisarDespesa.cs">
       <SubType>Form</SubType>
@@ -390,6 +397,9 @@
     <EmbeddedResource Include="Views\Forms\Despesa\frmImagemDespesa.resx">
       <DependentUpon>frmImagemDespesa.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Views\Forms\Despesa\frmNovaDespesa.resx">
+      <DependentUpon>frmNovaDespesa.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Views\Forms\Despesa\frmPesquisarDespesa.resx">
       <DependentUpon>frmPesquisarDespesa.cs</DependentUpon>
     </EmbeddedResource>
@@ -497,6 +507,11 @@
   <ItemGroup>
     <None Include="Resources\minimize.png" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="Resources\anexo.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\anexo1.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
